--- a/sites/docs.mockybalboa.com/docs/client/playwright.mdx
+++ b/sites/docs.mockybalboa.com/docs/client/playwright.mdx
@@ -37,7 +37,7 @@ __≥ 1.x.x__
 
 ## Usage
 
-Below is a basic example of how to use Mocky Balboa to mock a server-side network request from directly within your Playwright tests.
+Below is a basic example of how to use Mocky Balboa to mock a network request from directly within your Playwright tests.
 
 <Tabs groupId="javascript-language">
   <TabItem value="typescript" label="TypeScript" default>
