--- a/sites/docs.mockybalboa.com/docs/client/custom.mdx
+++ b/sites/docs.mockybalboa.com/docs/client/custom.mdx
@@ -148,4 +148,4 @@ Make sure to disconnect the client from the Mocky Balboa server when you are don
 
 To re-use the same route handler interface for both client and server side network requests, you can inject a client route handler into the client instance. This expects a function callback in the implementing framework that can accept arbitrary arguments and returns any response. It is on you to transform the incoming arguments to a `Request` object that can be used by Mocky Balboa internally, and transform the `ExternalRouteHandlerRouteResponse` to the appropriate response for your framework.
 
-For an example of this see the [Playwright integration code](TODO).
+For an example of this see the [Playwright integration code](https://github.com/mocky-balboa/mocky-balboa/blob/main/packages/playwright/src/playwright.ts).
