docs: undo auto styling

--- a/sites/docs.mockybalboa.com/docs/server/vite.mdx
+++ b/sites/docs.mockybalboa.com/docs/server/vite.mdx
@@ -20,13 +20,19 @@ How to use Mocky Balboa with [Vite](https://vitejs.dev/).
 
 <Tabs groupId="package-manager">
   <TabItem value="pnpm" label="pnpm" default>
-    ```bash pnpm add -D @mocky-balboa/vite ```
+    ```
+    bash pnpm add -D @mocky-balboa/vite
+    ```
   </TabItem>
   <TabItem value="npm" label="npm">
-    ```bash npm install -D @mocky-balboa/vite ```
+    ```
+    bash npm install -D @mocky-balboa/vite
+    ```
   </TabItem>
   <TabItem value="yarn" label="yarn">
-    ```bash yarn add -D @mocky-balboa/vite ```
+    ```
+    bash yarn add -D @mocky-balboa/vite
+    ```
   </TabItem>
 </Tabs>
 
@@ -47,7 +53,6 @@ In dev mode, all you need to do is enable the Vite plugin in your `vite.config.{
           plugins: [mockyBalboa()],
         });
         ```
-
   </TabItem>
   <TabItem value="javascript" label="JavaScript">
       ```JavaScript
@@ -59,7 +64,6 @@ In dev mode, all you need to do is enable the Vite plugin in your `vite.config.{
         plugins: [mockyBalboa()],
       });
       ```
-
   </TabItem>
 </Tabs>
 
